--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -14,7 +14,7 @@
 \usepackage{nopageno} % pour supprimer les numeros des pages
 \usepackage{pdfsync}
 \pagestyle{myheadings}
-\markright{ENSIIE 1A 2015/2016 - MPM projet Math - Michel Massarro}
+\markright{ENSIIE 1A 2016 - Michel Massaro\\ Alexis Schutzger - Franck Schmitt}
 \newtheorem{definition}{Définition}
 \usepackage[T1]{fontenc} 
 
@@ -215,44 +215,45 @@ Afin de répondre à la problématique, modéliser les données et pouvoir répondre à
 \medbreak
 Nous utilisons les conditions initiales de l'énoncé
 \begin{center}
-\includegraphics[scale=0.5]{images/init.png}
+\includegraphics[scale=0.5]{init.png}
 \end{center}
 
 Le programme présente plusieurs parties. Le main itère un nombre donné de fois pour converger vers une solution de déplacement de plus en plus précise et minimale. La solution finale de u est utilisée comme valeur de départ de la prochaine itération.
 
 \begin{center}
-\includegraphics[scale=0.5]{images/main.png}
+\includegraphics[scale=0.5]{main.png}
 \end{center}
 
 A chaque itération, le main doit appeler une fonction qui renvoie une solution à une équation d'Euler permettant d'obtenir X. Pour obtenir cette solution, il est necessaire d'itérer pour converger vers celle-ci.
 Nous avons fait une fonction qui renvoie la solution de f(x, u) necessaire pour calculer Euler au rang k.
 \begin{center}
-\includegraphics[scale=0.5]{images/firstEq.png}
+\includegraphics[scale=0.5]{firstEq.png}
 \end{center}
 
 Cette solution sert de condition initiale pour résoudre l'équation d'Euler rétrograde. Euler rétrograde, à l'instar d'euler, itère également en convergeant vers la solution. A chaque itération une fonction qui calcule g(x, u) est appellée.
 \begin{center}
-\includegraphics[scale=0.5]{images/secEq.png}
+\includegraphics[scale=0.5]{secEq.png}
 \end{center}
 
 Enfin cette solution est utilisée dans une fonction qui récupère le gradient à la kième itération du \textit{main}. 
 \begin{center}
-\includegraphics[scale=0.5]{images/grad.png}
+\includegraphics[scale=0.5]{grad.png}
 \end{center}
 
 Au bout des 500 itérations du main, nous récupérons donc un tableau de positions X qui est converti dans le repère circulaire de l'ISS.
 
 \begin{center}
-\includegraphics[scale=0.5]{images/adapt.png}
+\includegraphics[scale=0.5]{adapt.png}
 \end{center}
 
 
 Puis ce tableau est affiché dans un graphique (en bleu). Nous avons également affiché la trajectoire de l'ISS (en vert).
 
 \begin{center}
-\includegraphics[scale=0.5]{images/screenshot.png}
+\includegraphics[scale=0.5]{screenshot.png}
 \end{center}
 
+Nous pouvons observer que la courbe converge légèrement. Après de nombreux tests, nous avons remarqué que la courbe est très sensible aux valeurs initiales. La courbe semble au mieux avec une matrice A qui a pour première ligne 0, 0, 1, 0. Il serait également intéressant de faire partir le satellite du centre du cercle vert mais nous ne sommes pas parvenu à avoir une courbe propre., d'autant plus qu'il faudrait tenir compte d'autres paramètres tels que la force de gravité terrestre, la constante de gravitation, etc.
 
 \end{document}
 
